Initial BNNS core.